<resources>
    <string name="app_name">Happy</string>
    <string name="hello_world">Happy ! ! !</string>

    <!-- МЕНЮ -->
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>

    <array name="nav_drawer_icons">
        <item>@mipmap/ic_my_calendar_menu_item</item>
        <item>@mipmap/ic_my_calendar_menu_item</item>
        <item>@mipmap/ic_my_calendar_menu_item</item>
        <item>@mipmap/ic_my_calendar_menu_item</item>
        <item>@mipmap/ic_my_calendar_menu_item</item>
        <item>@mipmap/ic_my_calendar_menu_item</item>
        <item>@mipmap/ic_my_calendar_menu_item</item>
    </array>

    <string-array name="nav_drawer_items">
        <item>title_calculator</item>
        <item>title_product</item>
        <item>title_shopping_list</item>
        <item>title_shops</item>
        <item>title_test</item>
        <item>title_about</item>
    </string-array>

    <string name="title_calculator">Калькулятор</string>
    <string name="title_product">Товары</string>
    <string name="title_shopping_list">Список покупок</string>
    <string name="title_shops">Магазины</string>
    <string name="title_test">Test</string>
    <string name="title_about">О приложении</string>


    <string name="cancel">Отмена</string>
    <string name="volume">Объем</string>
    <string name="search">Поиск</string>
    <string name="price">Стоимость</string>
    <string name="save">Сохранить</string>


    <string name="error">Неизвестная ошибка</string>
    <string name="error_edit_text">Данные некорректны</string>
    <string name="error_data_field">Упс. Что-то неверно заполнено</string>

    <!-- Калькулятор -->
    <string name="calculator">Калькулятор</string>
    <string name="category_product">Название товара</string>
    <string name="string_rub">руб.</string>
    <string name="per">за</string>
    <string name="result">Итого: </string>
    <string name="add_new_brand">Добавить новый бренд</string>
    <string name="brand">Марка:</string>
    <string name="apply">Применить</string>
    <string name="select_shop">Укажите магазин</string>

    <!-- Список покупок -->
    <string name="amount_in_shopping">руб. (%1$.2f %2$s)</string>
    <string name="price_for_one_product">%1$.2f руб. за 1 %2$s</string>


    <!-- Товары -->
    <string name="product">Товар</string>
    <string name="remove">Удалить</string>
    <string name="add">Добавить</string>

    <string name="category">Категория</string>
    <string name="name_product">Имя продукта</string>
    <string name="name_category">Имя категории продукта</string>
    <string name="name_shop">Название магазина</string>
    <string name="address_shop">Адрес магазина</string>

    <string name="from">От</string>
    <string name="before">до</string>

    <string name="all_category">Все категории</string>
    <string name="add_product">Добавить товар</string>
    <string name="add_cost">Добавить цену</string>
    <string name="add_category">Добавить категорию</string>
    <string name="update_cost">Обновить</string>
    <string name="price_max">Стоимость без скидки</string>
    <string name="cost">Цена</string>

    <!-- Shop -->
    <string-array name="list_filter_shop">
        <item>Без сортировки</item>
    </string-array>


    <string name="title_shop">Магазин</string>
    <string name="add_shop">Добавить магазин</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>
    <string name="clear">Очистить</string>

    <!-- TEMP -->


</resources>
