<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/textView2"
            android:layout_toStartOf="@+id/textView2"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/string_rub" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPriceMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/textView3"
            android:layout_toStartOf="@+id/textView3"
            app:errorEnabled="false">

            <EditText
                android:id="@+id/editTextPriceMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/price_max"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/string_rub" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/editTextVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:ems="8"
                android:hint="@string/volume"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="4dp"
            android:layout_toRightOf="@+id/textInputLayoutVolume"
            android:layout_toEndOf="@+id/textInputLayoutVolume" />
    </RelativeLayout>

    <Spinner
        android:id="@+id/spinnerShop"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/buttonOk"
            android:padding="6dp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/color_primary"
            android:layout_toStartOf="@+id/buttonOk"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:padding="6dp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/color_primary"
            android:text="@string/apply" />
    </RelativeLayout>


</LinearLayout>