<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.iandp.happy.activity.RedactProductCalculatorActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/textViewCategoryProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="Имя продукта"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/imageButtonClose"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:background="@drawable/bg_pressed"
            android:contentDescription="@string/cancel"
            android:padding="10dp"
            android:src="@mipmap/ic_close_grey600_24dp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonApply"
        android:layout_below="@+id/linearLayout1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/editTextBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/brand"
                    android:textSize="20sp"
                    android:focusable="true"/>
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/editTextPrice"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/price"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:textSize="20sp"
                        tools:ignore="RtlHardcoded" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="19dp"
                    android:layout_marginStart="19dp"
                    android:layout_toEndOf="@+id/textInputLayoutPrice"
                    android:layout_toRightOf="@+id/textInputLayoutPrice"
                    android:paddingBottom="10dp"
                    android:text="@string/string_rub"
                    android:textSize="24sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/editTextVolume"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/volume"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:textSize="20sp"
                        tools:ignore="RtlHardcoded" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/spinnerUnits"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_alignParentBottom="true"
                    android:layout_alignTop="@+id/textInputLayoutVolume"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/textInputLayoutVolume"
                    android:layout_toRightOf="@+id/textInputLayoutVolume" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textViewShop"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="30dp"
                android:background="#ffff9a"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/select_shop"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/apply"
        android:textSize="20sp" />
</RelativeLayout>
