<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iandp.happy.fragment.ShoppingListFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextPrice"
            style="@style/StyleEditTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionNext"
            android:ems="7"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="339dp" />

        <EditText
            android:id="@+id/editTextAmount"
            style="@style/StyleEditTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:ems="6"
            android:hint="@string/volume"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@+id/buttonTypeAmount"
            tools:layout_editor_absoluteX="227dp" />

        <com.iandp.happy.views.ButtonTypeAmount
            android:id="@+id/buttonTypeAmount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextName"
        style="@style/StyleEditTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/category_product"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/clear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSum"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonCancel"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/buttonAdd"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/buttonAdd"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAdd"
        android:textSize="20sp" />

      <View
          android:id="@+id/textView9"
          android:layout_width="0dp"
          android:layout_height="1dp"
          android:layout_marginTop="8dp"
          android:background="@color/color_primary_dark"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/buttonCancel" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</android.support.constraint.ConstraintLayout>
