<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCategoryProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="Имя продукта"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/imageButtonClose"
            android:layout_toStartOf="@+id/imageButtonClose" />

        <ImageButton
            android:id="@+id/imageButtonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/cancel"
            android:padding="10dp"
            android:src="@mipmap/ic_close_grey600_24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutBrand"
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/brand"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:focusable="true"/>
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp">

                    <EditText
                        android:id="@+id/editTextPrice"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/price"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:textSize="16sp"
                        tools:ignore="RtlHardcoded" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/labelErrorPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/textInputLayoutPrice"
                    android:layout_toRightOf="@+id/textInputLayoutPrice"
                    android:layout_centerVertical="true"
                    android:visibility="invisible"
                    android:src="@mipmap/alert_octagon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/labelErrorPrice"
                    android:layout_toRightOf="@+id/labelErrorPrice"
                    android:paddingBottom="10dp"
                    android:text="@string/string_rub"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="2dp">

                    <EditText
                        android:id="@+id/editTextVolume"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:hint="@string/volume"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:textSize="16sp"
                        tools:ignore="RtlHardcoded" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/labelErrorVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/textInputLayoutVolume"
                    android:layout_toRightOf="@+id/textInputLayoutVolume"
                    android:layout_centerVertical="true"
                    android:visibility="invisible"
                    android:src="@mipmap/alert_octagon"/>

                <Spinner
                    android:id="@+id/spinnerUnits"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="7dp"
                    android:layout_marginStart="7dp"
                    android:layout_toEndOf="@+id/labelErrorVolume"
                    android:layout_toRightOf="@+id/labelErrorVolume" />

            </RelativeLayout>

            <com.iandp.happy.customViews.SpinnerShops
                android:id="@+id/mySpinnerShop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="20dp"/>

            <Button
                android:id="@+id/buttonApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:padding="10dp"
                android:textColor="@color/color_primary_dark"
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="end" />
        </LinearLayout>
    </ScrollView>
<!--
    <Button
        android:id="@+id/buttonApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/apply"
        android:textSize="18sp" />-->
</RelativeLayout>